fix: Increase Instagram icon size on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1358,8 +1358,8 @@ form label {
         padding: 12px;
     }
     .gtco-video .instagram-btn i {
-        font-size: 2rem;
-        transform: scale(0.7);
+        font-size: 2.4rem;
+        transform: scale(0.8);
     }
 }
 
